--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -6,12 +6,12 @@
 // // Your variable overrides
 $body-bg: #000;
 $body-color: #111;
-body{
-  background-color: red;
-}
-.text-primary {
-  color: #2525b1;
-}
+// body{
+//   background-color: red;
+// }
+// .text-primary {
+//   color: #2525b1;
+// }
 // // Bootstrap and its default variables
 
 // // Optional
