--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -1,8 +1,3 @@
-// @import "custom";
-// @import "~bootstrap/scss/bootstrap";
+@import "custom";
+@import "~bootstrap/scss/bootstrap";
 
-$body-color: red;
-
-body {
-  color: $body-color;
-}
