--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -15,12 +15,41 @@ $colors: (
   }
 };
 
-body{
-  text-align: center;
-  background-image: url(../img/max-chen-QQu8pilYcjA-unsplash.jpg);
-  background-repeat: no-repeat;
+body {
+  background-attachment: fixed;
+  background-position: center center;
   background-size: cover;
+  background-repeat: no-repeat;
+  backface-visibility: hidden;
+  animation: slideBg 16s linear infinite 0s;
+  animation-timing-function: ease-in-out;
+  background-image: url(../img/slide-bg1.jpg);
 }
+
+@keyframes slideBg {
+  0% {
+    background-image: url(../img/slide-bg1.jpg);
+  }
+  25% {
+    background-image: url(../img/slide-bg2.jpg);
+  }
+  50% {
+    background-image: url(../img/slide-bg3.jpg);
+  }
+  75% {
+    background-image: url(../img/slide-bg4.jpg);
+  }
+  100% {
+    background-image: url(../img/slide-bg1.jpg);
+  }
+}
+
+// body{
+//   text-align: center;
+//   background-image: url(../img/max-chen-QQu8pilYcjA-unsplash.jpg);
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
 
 .portal{
   height: 100vh;
