--- a/src/scss/sub.scss
+++ b/src/scss/sub.scss
@@ -1,3 +1,5 @@
+@import "~bootstrap/scss/bootstrap";
+
 $colors: (
   fill: #a972cb,
   pulse: #ef6eae, 
@@ -14,36 +16,6 @@ $colors: (
     --hover: #{adjust-hue($color, 10deg)};
   }
 };
-
-body {
-  text-align: center;
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  backface-visibility: hidden;
-  animation: slideBg 16s linear infinite 0s;
-  animation-timing-function: ease-in-out;
-  background-image: url(../img/slide-bg1.jpg);
-}
-
-@keyframes slideBg {
-  0% {
-    background-image: url(../img/slide-bg1.jpg);
-  }
-  25% {
-    background-image: url(../img/slide-bg2.jpg);
-  }
-  50% {
-    background-image: url(../img/slide-bg3.jpg);
-  }
-  75% {
-    background-image: url(../img/slide-bg4.jpg);
-  }
-  100% {
-    background-image: url(../img/slide-bg1.jpg);
-  }
-}
 
 .header {
   height: 20vh;
