--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -16,33 +16,63 @@ $colors: (
 };
 
 body {
+  position: relative;
   text-align: center;
   background-attachment: fixed;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   backface-visibility: hidden;
-  animation: slideBg 16s linear infinite 0s;
+  animation: slideBg 24s linear infinite 0s;
   animation-timing-function: ease-in-out;
   background-image: url(../img/slide-bg1.jpg);
+  z-index: -2;
 }
+
+body::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: inherit;
+  // background: rgba(255,0,0,.5);
+  filter: blur(2px);
+  z-index: -1;
+}
+
 
 @keyframes slideBg {
   0% {
     background-image: url(../img/slide-bg1.jpg);
   }
-  25% {
+  20% {
     background-image: url(../img/slide-bg2.jpg);
   }
-  50% {
+  40% {
     background-image: url(../img/slide-bg3.jpg);
   }
-  75% {
+  60% {
     background-image: url(../img/slide-bg4.jpg);
+  }
+  80% {
+    background-image: url(../img/slide-bg5.jpg);
   }
   100% {
     background-image: url(../img/slide-bg1.jpg);
   }
+}
+
+.logo-text {
+  letter-spacing: 1px;
+  // background: ivory;
+  text-shadow: -1px -1px 0 #000, 
+               1px -1px 0 #000,
+              -1px 1px 0 #000, 
+              1px 1px 0 #000;
 }
 
 .header {
@@ -58,11 +88,21 @@ a{
 }
 
 .card {
-  background-color: #e1d3c1;
+  position: relative;
+  background: hsla(0,0%,100%,.8);  
+  overflow: hidden;
+  padding: 1em 0;
+  border-radius: .3em;
+  max-width: 500px;
+  margin: 0 auto;
+  box-shadow: 0 0 0 1px hsla(0,0%,100%,.3) inset,
+	            0 .5em 1em rgba(0, 0, 0, 0.6);
+	text-shadow: 0 1px 1px hsla(0,0%,100%,.3);
+  background-color: rgba(225, 211, 193, 0.829);
 }
 
 .portal-container-unable {
-  background-color: lightslategray;
+  background-color: rgb(119, 136, 153);
 }
 
 .card-title {
