--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -23,7 +23,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   backface-visibility: hidden;
-  animation: slideBg 24s linear infinite 0s;
+  // animation: slideBg 24s linear infinite 0s;
   animation-timing-function: ease-in-out;
   background-image: url(../img/slide-bg1.jpg);
   z-index: -2;
@@ -39,7 +39,6 @@ body::after {
   bottom: 0;
   left: 0;
   background: inherit;
-  // background: rgba(255,0,0,.5);
   filter: blur(2px);
   z-index: -1;
 }
